feat(global): update translations

--- a/apps/front/i18n/cs.json
+++ b/apps/front/i18n/cs.json
@@ -1446,7 +1446,7 @@
     },
     "disclaimer": "Make.org není provozovatelem online platformy spadající do působnosti zákona č. 2018-1202 ze dne 22. prosince 2018 o boji proti manipulaci s informacemi. Proto se na nás nevztahují související povinnosti. Pravdivost informací zveřejněných na našich stránkách je však pro nás důležitá a v této Chartě podrobně popisujeme opatření, která v tomto ohledu přijímáme.",
     "foot_notes": {
-      "ethical_charter": "Tato charta moderování byla vypracována v souladu s <a href=\"https://assets.website-files.com/59833d390a24e50001b873d8/6391a67677495785ac47cab4_Charte%20Ethique%20Make.org%20et%20Make.org%20Foundation%20valide%CC%81e_CZ.docx.pdf\" target=\"_blank\">etickou chartou (nová karta)</a>, která zaručuje neutralitu, nezávislost a transparentnost Make.org.",
+      "ethical_charter": "Tato charta moderování byla vypracována v souladu s <a href=\"https://assets.make.org/consultations/ethical_charter_cs.pdf\" target=\"_blank\">etickou chartou (nová karta)</a>, která zaručuje neutralitu, nezávislost a transparentnost Make.org.",
       "code_penal": "Francouzský Code Pénal definuje diskriminaci jako \"jakékoli rozlišování mezi fyzickými osobami na základě jejich původu, pohlaví, rodinné situace, obezity, vzhledu, příjmení, bydliště, zdravotního stavu, zdravotního postižení, genetických znaků, zvyků, sexuální orientace nebo identity, věku, politických názorů nebo odborových aktivit nebo na základě jejich skutečné či domnělé příslušnosti či nepříslušnosti k určité etnické skupině, národu, rase nebo náboženství\". (Čl. 225-1 odst. 1.)"
     }
   }
