--- a/apps/front/i18n/uk.json
+++ b/apps/front/i18n/uk.json
@@ -1447,7 +1447,7 @@
     },
     "disclaimer": "Make.org не є оператором онлайн-платформи, що підпадає під дію Закону Франції № 2018-1202 від 22 грудня 2018 року про протидію маніпулюванню інформацією. Таким чином, ми не є суб’єктом відповідних зобов’язань. Проте ми дуже серйозно ставимося до достовірності інформації, розміщеної на нашому сайті, і детально описуємо в цьому Кодексі заходи, які вживаємо стосовно цього.",
     "foot_notes": {
-      "ethical_charter": " Цей <a href=\"https://assets.website-files.com/59833d390a24e50001b873d8/5fd245978b3dbedcbcc121a2_VF%20Charte%20Ethique%20Make.org%20et%20Make.org%20Foundation%20valid%C3%A9e.pdf\" target=\"_blank\">Кодекс модерації (нова вкладка)</a> розроблений відповідно до Кодексу етики, який гарантує нейтральність, незалежність та прозорість Make.org:",
+      "ethical_charter": " Цей <a href=\"https://assets.make.org/consultations/ethical_charter_uk.pdf\" target=\"_blank\">Кодекс модерації (нова вкладка)</a> розроблений відповідно до Кодексу етики, який гарантує нейтральність, незалежність та прозорість Make.org:",
       "code_penal": "Кримінальний кодекс України визначає дискримінацію як «умисні дії, спрямовані на розпалювання національної, регіональної, расової чи релігійної ворожнечі та ненависті, на приниження національної честі та гідності, або образа почуттів громадян у зв’язку з їхніми релігійними переконаннями, а також пряме чи непряме обмеження прав або встановлення прямих чи непрямих привілеїв громадян за ознаками раси, кольору шкіри, політичних, релігійних та інших переконань, статі, інвалідності, етнічного та соціального походження, майнового стану, місця проживання, за мовними або іншими ознаками». (Стаття 161-§1)."
     }
   }
