--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -1410,7 +1410,18 @@
     "nl": "Nederlands",
     "fi": "Suomi",
     "ro": "Română",
-    "bg": "Български"
+    "bg": "Български",
+    "da": "Dansk",
+    "el": "Ελληνικά",
+    "et": "Eesti",
+    "hr": "Hrvatski",
+    "hu": "Magyar",
+    "lt": "Lietuvių",
+    "lv": "Latviešu",
+    "pt": "Portuguese",
+    "sk": "Slovenský",
+    "sl": "Slovenski",
+    "sv": "Svenska"
   },
   "demographics_card": {
     "disclaimer": "Deine Angaben sind anonym und ermöglichen es, die Ergebnisse möglichst repräsentativ zu gestalten.",
