--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -1387,7 +1387,18 @@
     "nl": "Nederlands",
     "fi": "Suomi",
     "ro": "Română",
-    "bg": "Български"
+    "bg": "Български",
+    "da": "Dansk",
+    "el": "Ελληνικά",
+    "et": "Eesti",
+    "hr": "Hrvatski",
+    "hu": "Magyar",
+    "lt": "Lietuvių",
+    "lv": "Latviešu",
+    "pt": "Portuguese",
+    "sk": "Slovenský",
+    "sl": "Slovenski",
+    "sv": "Svenska"
   },
   "sequence_zone": {
     "popular_title": "Popular proposals",
