--- a/apps/front/i18n/lv.json
+++ b/apps/front/i18n/lv.json
@@ -1418,7 +1418,18 @@
     "nl": "Nederlands",
     "fi": "Suomi",
     "ro": "Română",
-    "bg": "Български"
+    "bg": "Български",
+    "da": "Dansk",
+    "el": "Ελληνικά",
+    "et": "Eesti",
+    "hr": "Hrvatski",
+    "hu": "Magyar",
+    "lt": "Lietuvių",
+    "lv": "Latviešu",
+    "pt": "Portuguese",
+    "sk": "Slovenský",
+    "sl": "Slovenski",
+    "sv": "Svenska"
   },
   "language_switch": {
     "country_title": "Jūsu valsts",
