feat(global): add anonymous proposal logic

--- a/apps/front/i18n/da.json
+++ b/apps/front/i18n/da.json
@@ -327,7 +327,9 @@
     "author": {
       "from": "Forslag fra: ",
       "age": "{{age}} år",
-      "date": "Indsendt den: "
+      "date": "Indsendt den: ",
+      "anonymous": "@@proposal_card.author.anonymous|fr:Mode anonyme",
+      "disclaimer": "@@proposal_card.author.disclaimer|fr:Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
       "title": "Forslagets status: ",
