--- a/apps/front/i18n/fi.json
+++ b/apps/front/i18n/fi.json
@@ -325,7 +325,9 @@
     "author": {
       "from": "Ehdotus henkilöltä ",
       "age": "{{age}} vuotta",
-      "date": "julkaisupäivämäärä: "
+      "date": "julkaisupäivämäärä: ",
+      "anonymous": "@@proposal_card.author.anonymous|fr:Mode anonyme",
+      "disclaimer": "@@proposal_card.author.disclaimer|fr:Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
       "title": "Ehdotuksen sisältö: ",
