--- a/apps/front/i18n/cs.json
+++ b/apps/front/i18n/cs.json
@@ -332,7 +332,9 @@
     "author": {
       "from": "Návrh: ",
       "age": "{{age}} let",
-      "date": "zveřejněno dne: "
+      "date": "zveřejněno dne: ",
+      "anonymous": "@@proposal_card.author.anonymous|fr:Mode anonyme",
+      "disclaimer": "@@proposal_card.author.disclaimer|fr:Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
       "title": "Stav návrhu: ",
