--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -327,7 +327,9 @@
     "author": {
       "from": "Vorschlag von: ",
       "age": "{{age}}",
-      "date": "Geschrieben am: "
+      "date": "Geschrieben am: ",
+      "anonymous": "@@proposal_card.author.anonymous|fr:Mode anonyme",
+      "disclaimer": "@@proposal_card.author.disclaimer|fr:Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
       "title": "Status des Vorschlags: ",
