--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -299,7 +299,9 @@
     "author": {
       "age": "{{age}}",
       "from": "Proposal from: ",
-      "date": "published on: "
+      "date": "published on: ",
+      "anonymous": "@@proposal_card.author.anonymous|fr:Mode anonyme",
+      "disclaimer": "@@proposal_card.author.disclaimer|fr:Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
       "accepted": "Published",
