--- a/apps/front/i18n/es.json
+++ b/apps/front/i18n/es.json
@@ -330,7 +330,9 @@
     "author": {
       "from": "Propuesta de: ",
       "age": "{{age}} años",
-      "date": "publicada el: "
+      "date": "publicada el: ",
+      "anonymous": "@@proposal_card.author.anonymous|fr:Mode anonyme",
+      "disclaimer": "@@proposal_card.author.disclaimer|fr:Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
       "title": "Estado de la propuesta: ",
