--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -327,7 +327,9 @@
     "author": {
       "from": "Proposition de : ",
       "age": "{{age}} ans",
-      "date": "postée le : "
+      "date": "postée le : ",
+      "anonymous": "Mode anonyme",
+      "disclaimer": "Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
       "title": "Statut de la proposition : ",
