--- a/apps/front/i18n/hu.json
+++ b/apps/front/i18n/hu.json
@@ -327,7 +327,9 @@
     "author": {
       "from": "A javaslat szerzője: ",
       "age": "{{age}} éves",
-      "date": "közzétéve: "
+      "date": "közzétéve: ",
+      "anonymous": "@@proposal_card.author.anonymous|fr:Mode anonyme",
+      "disclaimer": "@@proposal_card.author.disclaimer|fr:Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
       "title": "A javaslat állapota: ",
