--- a/apps/front/i18n/it.json
+++ b/apps/front/i18n/it.json
@@ -330,7 +330,9 @@
     "author": {
       "from": "Proposta di: ",
       "age": "{{age}} anni",
-      "date": "pubblicata il: "
+      "date": "pubblicata il: ",
+      "anonymous": "@@proposal_card.author.anonymous|fr:Mode anonyme",
+      "disclaimer": "@@proposal_card.author.disclaimer|fr:Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
       "title": "Status della proposta: ",
