--- a/apps/front/i18n/lt.json
+++ b/apps/front/i18n/lt.json
@@ -337,7 +337,9 @@
     "author": {
       "from": "Pasiūlymas: ",
       "age": "{{age}} metai (-ų)",
-      "date": "įkelta: "
+      "date": "įkelta: ",
+      "anonymous": "@@proposal_card.author.anonymous|fr:Mode anonyme",
+      "disclaimer": "@@proposal_card.author.disclaimer|fr:Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
       "title": "Pasiūlymo statusas: ",
