--- a/apps/front/i18n/nl.json
+++ b/apps/front/i18n/nl.json
@@ -325,7 +325,9 @@
     "author": {
       "from": "Voorstel van: ",
       "age": "{{age}} jaar",
-      "date": "geplaatst op: "
+      "date": "geplaatst op: ",
+      "anonymous": "@@proposal_card.author.anonymous|fr:Mode anonyme",
+      "disclaimer": "@@proposal_card.author.disclaimer|fr:Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
       "title": "Status van het voorstel: ",
