--- a/apps/front/i18n/pl.json
+++ b/apps/front/i18n/pl.json
@@ -330,7 +330,9 @@
     "author": {
       "from": "Propozycja: ",
       "age": "{{age}} lat",
-      "date": "złożona: "
+      "date": "złożona: ",
+      "anonymous": "@@proposal_card.author.anonymous|fr:Mode anonyme",
+      "disclaimer": "@@proposal_card.author.disclaimer|fr:Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
       "title": "Status propozycji: ",
