--- a/apps/front/i18n/ro.json
+++ b/apps/front/i18n/ro.json
@@ -330,7 +330,9 @@
     "author": {
       "from": "Propunere făcută de: ",
       "age": "{{age}} ani",
-      "date": "publicată la data: "
+      "date": "publicată la data: ",
+      "anonymous": "@@proposal_card.author.anonymous|fr:Mode anonyme",
+      "disclaimer": "@@proposal_card.author.disclaimer|fr:Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
       "title": "Statutul propunerii: ",
