--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -325,10 +325,11 @@
     "number": "Carte numéro {{current}} sur {{total}}",
     "posted_label": "Postée dans ",
     "author": {
+      "anonymous_proposal": "Proposition anonyme",
       "from": "Proposition de : ",
       "age": "{{age}} ans",
       "date": "postée le : ",
-      "anonymous": "Mode anonyme",
+      "anonymous_mode": "Mode anonyme",
       "disclaimer": "Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
