--- a/apps/widget/i18n/fr.json
+++ b/apps/widget/i18n/fr.json
@@ -125,7 +125,8 @@
       "from": "Proposition de : ",
       "age": "{{age}} ans",
       "date": "postée le : ",
-      "anonymous": "Mode anonyme",
+      "anonymous_proposal": "Proposition anonyme",
+      "anonymous_mode": "Mode anonyme",
       "disclaimer": "Cette option ne vous dispense pas d’être connecté à votre compte Make.org.<br/>Cependant, votre proposition restera anonyme pour les autres utilisateurs."
     },
     "status": {
