chore(global): update translations
Co-authored-by: Valentine Santarelli <valentine.santarelli@make.org>
Translate-URL: https://hosted.weblate.org/projects/make-org/core/el/
Translate-URL: https://hosted.weblate.org/projects/make-org/core/et/
Translation: Make.org/front-main

--- a/apps/front/i18n/el.json
+++ b/apps/front/i18n/el.json
@@ -558,7 +558,7 @@
     "privacy_policy": "πολιτική δεδομένων",
     "make_protect": "Η Make.org δεσμεύεται να προστατεύει τα",
     "make_protect_link": " προσωπικά σας δεδομένα.",
-    "opt_in": "Συμφωνώ να λαμβάνω μηνύματα ηλεκτρονικού ταχυδρομείου από το Make.org για να ενημερώνομαι σχετικά με τις τρέχουσες και επόμενες διαβουλεύσεις. (προαιρετικά)"
+    "opt_in": "Συμφωνώ να λαμβάνω μηνύματα ηλεκτρονικού ταχυδρομείου από τη Make.org για να ενημερώνομαι σχετικά με τις τρέχουσες και επόμενες διαβουλεύσεις. (προαιρετικά)"
   },
   "forgot_password": {
     "title": "Επαναφορά κωδικού πρόσβασης",
@@ -945,7 +945,7 @@
       "commitment_text": "Υποστηρίζουν τη διαβούλευση και το σχέδιο δράσης για τους πολίτες που θα ακολουθήσει.",
       "commitment_link": "Δείτε όλους τους εταίρους",
       "founder": "Ιδρυτικός εταίρος",
-      "init": "Η διαβούλευση ξεκίνησε με πρωτοβουλία:",
+      "init": "Η διαβούλευση ξεκίνησε με πρωτοβουλία των:",
       "initWith": "Η διαβούλευση αυτή ξεκίνησε με:",
       "with": "Σε συνεργασία με:",
       "by": "Με πρωτοβουλία: ",
@@ -1117,7 +1117,7 @@
       "title": "Η Make.org σε αριθμούς",
       "participants": {
         "subtitle_one": "συμμετέχοντα",
-        "subtitle_other": "συμμετεχόντων"
+        "subtitle_other": "συμμετέχοντες"
       },
       "proposals": {
         "subtitle_one": "πρόταση που υποβλήθηκε",
